# MagicBoxReduxCmake

./: .gitignore  CMakeLists.txt  conanfile.txt
includes/: AppSettings.cpp  AppSettings.h  Downloader.h  DownloaderWindow.h  MBReduxApplication.cpp  MBReduxApplication.h  MainWindow.h  ManagerWindow.h  Mod.h  ModController.h  ModDownloader.h  ModExceptions.h  ModServer.h  MyTab.h  MyTabExceptions.h  SettingsWindow.h  Support.h  xml.h  xmlitem.h  xmlnode.h
resources/: resources.qrc
src/: AppSettings.cpp  Downloader.cpp  DownloaderWindow.cpp  DownloaderWindow.ui  MainWindow.cpp  MainWindow.ui  ManagerWindow.cpp  ManagerWindow.ui  Mod.cpp  ModController.cpp  ModDownloader.cpp  ModServer.cpp  MyTab.cpp  SettingsWindow.cpp  SettingsWindow.ui  Support.cpp  main.cpp  testform.ui  xml.cpp  xmlnode.cpp
